<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:id="@+id/historyRowLayout">

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/rowEditBtn"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@null"
        android:layout_marginEnd="38dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/rowPlayBtn" />

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/rowPlayBtn"
        android:src="@android:drawable/ic_media_play"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/row_task"
        android:id="@+id/rowTvTask" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/row_time"
        android:id="@+id/rowTvTime"
        android:layout_below="@+id/rowTvTask"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rowTvTime"
        android:id="@+id/expansion"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/row_start_time"
            android:id="@+id/rowTvStart"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/row_start_time"
            android:id="@+id/rowTvStop"
            android:layout_below="@+id/rowTvStart"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/row_stop_time"
            android:id="@+id/rowTvLocation"
            android:layout_below="@+id/rowTvStop"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/row_location"
            android:id="@+id/rowTvGps"
            android:layout_below="@+id/rowTvLocation"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/row_notes"
            android:id="@+id/rowTvNotes"
            android:layout_below="@+id/rowTvGps"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>