<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchTvTask"
        android:layout_marginTop="31dp"
        android:text="@string/create_task" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchEtTask"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyzåäö,ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ "/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_location"
        android:id="@+id/tvLocation" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchEtLocation" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_gps"
        android:id="@+id/launchTvGps"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/launchEtGps"
            android:lines="2"
            android:focusable="true"
            android:layout_weight="1"
            android:editable="false" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_notes"
        android:id="@+id/launchTvNotes"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/launchEtNotes"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launchBtn"
        android:src="@android:drawable/ic_media_play"
        android:layout_gravity="center_horizontal" />

</LinearLayout>