<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:text="@string/settings_pwd"
        android:id="@+id/settingsTagPwd"
        android:layout_below="@+id/settingsTvName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="Jürgen@gmail.com"
        android:id="@+id/settingsTvMail"
        android:layout_below="@+id/settingsTagMail"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/view"
        android:layout_below="@+id/settingsTvMail"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:text="@string/settings_name"
        android:id="@+id/settingsTagName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="Jürgen"
        android:id="@+id/settingsTvName"
        android:layout_below="@+id/settingsTagName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:text="@string/settings_mail"
        android:id="@+id/settingsTagMail"
        android:layout_below="@+id/settingsTvPwd"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="**********"
        android:id="@+id/settingsTvPwd"
        android:layout_below="@+id/settingsTagPwd"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_notifications"
        android:id="@+id/settingsSwitchNotifications"
        android:checked="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:text="@string/settings_language"
        android:id="@+id/settingsBtnLanguage"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:layout_below="@+id/view" />

</RelativeLayout>