<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/ctaskTvTask"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ctaskLlTimer"
        android:layout_weight="0.07">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/ctaskImgPause"
            android:src="@android:drawable/ic_media_pause"
            android:background="@null"
            android:visibility="gone"/>

        <Chronometer
            android:id="@+id/ctaskChronometer"
            android:format="%s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/ctaskImgStop"
            android:src="@mipmap/ic_media_stop"
            android:background="@null"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_location"
            android:id="@+id/ctaskLblLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_start_time"
            android:id="@+id/ctaskLblStart"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ctaskTvStart"
            android:textColor="@android:color/black"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_gps"
            android:id="@+id/ctaskLblGps"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ctaskTvGps"
            android:textColor="@android:color/black"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_notes"
            android:id="@+id/ctaskLblNote"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ctaskTvLocation"
            android:textColor="@android:color/black"
            android:layout_row="0"
            android:layout_column="1" />

    </GridLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ctaskEtNotes"
        android:visibility="gone"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_save"
        android:id="@+id/ctaskBtnSave"
        android:layout_gravity="right"
        android:visibility="gone"/>

</LinearLayout>